@@ -133,7 +133,6 @@ import org.mockito.Mockito;
 import org.mockito.MockitoAnnotations;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
@@ -3767,17 +3766,17 @@ public class WifiManagerTest {
                 {WifiManager.WIFI_INTERFACE_TYPE_AP, WifiManager.WIFI_INTERFACE_TYPE_AWARE};
         final String[] packagesForInterfaces =
                 {TEST_PACKAGE_NAME, packageName1 + "," + packageName2};
-        final List<WifiManager.InterfaceCreationConsequence> interfacePairs = List.of(
-                new WifiManager.InterfaceCreationConsequence(interfaces[0],
-                        Arrays.asList(new String[]{TEST_PACKAGE_NAME})),
-                new WifiManager.InterfaceCreationConsequence(interfaces[1],
-                        Arrays.asList(new String[]{packageName1, packageName2})));
+        final List<WifiManager.InterfaceCreationImpact> interfacePairs = List.of(
+                new WifiManager.InterfaceCreationImpact(interfaces[0],
+                        new ArraySet<>(new String[]{TEST_PACKAGE_NAME})),
+                new WifiManager.InterfaceCreationImpact(interfaces[1],
+                        new ArraySet<>(new String[]{packageName1, packageName2})));
         when(mContext.getOpPackageName()).thenReturn(TEST_PACKAGE_NAME);
-        BiConsumer<Boolean, List<WifiManager.InterfaceCreationConsequence>> resultCallback = mock(
+        BiConsumer<Boolean, List<WifiManager.InterfaceCreationImpact>> resultCallback = mock(
                 BiConsumer.class);
         ArgumentCaptor<IInterfaceCreationInfoCallback.Stub> cbCaptor = ArgumentCaptor.forClass(
                 IInterfaceCreationInfoCallback.Stub.class);
-        ArgumentCaptor<List<WifiManager.InterfaceCreationConsequence>> resultCaptor =
+        ArgumentCaptor<List<WifiManager.InterfaceCreationImpact>> resultCaptor =
                 ArgumentCaptor.forClass(List.class);
 
         mWifiManager.reportCreateInterfaceImpact(interfaceToCreate, requireNewInterface,
